<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/nav_cart"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_reorder_24"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/category"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_app_settings_alt_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/logout" />
    </group>
</menu>