<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sellers.SellerRegistrationActivity">

    <ImageView
        android:id="@+id/img_seller"
        android:layout_width="500dp"
        android:layout_height="115dp"
        android:scaleType="centerCrop"
        android:src="@drawable/register" />

    <TextView
        android:id="@+id/title_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seller_registration_form"
        android:gravity="center"
        android:layout_below="@id/img_seller"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="24dp"



    />

    <EditText
        android:id="@+id/seller_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/seller_name"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/title_seller"
        android:inputType="text"
        android:textSize="16dp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seller_phone"
        android:hint="@string/phone_number"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/seller_name"
        android:inputType="number"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seller_email"
        android:hint="@string/email"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/seller_phone"
        android:inputType="text"
        android:textSize="16dp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seller_password"
        android:hint="@string/passward"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/seller_email"
        android:inputType="text"
        android:textSize="16dp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seller_address"
        android:hint="@string/your_shop_address"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/seller_password"
        android:inputType="text"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/seller_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/teal_700"
        android:layout_below="@+id/seller_address"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/register"
        android:textSize="18sp"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/seller_already_have_registered_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/teal_700"
        android:layout_below="@id/seller_register_btn"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/already_have_an_account"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"





        />

</RelativeLayout>