<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyers.ResetPasswordActivity">

    <RelativeLayout
        android:id="@+id/relative123"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/page_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            />
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/find_phone_number"
        android:hint="Please write your phone number..."
        android:background="@drawable/inputs_design"
        android:layout_margin="15dp"
        android:padding="14dp"
        android:layout_below="@+id/relative123"/>

    <TextView
        android:id="@+id/title_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_the_following_security_questions"
        android:gravity="center"
        android:layout_below="@+id/find_phone_number"
        android:textSize="26sp"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_1"
        android:hint="@string/what_is_name_of_your_pet"
        android:background="@drawable/inputs_design"
        android:layout_margin="15dp"
        android:padding="14dp"
        android:layout_below="@id/title_questions"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_2"
        android:hint="@string/what_is_your_favorite_place"
        android:background="@drawable/inputs_design"
        android:layout_margin="15dp"
        android:padding="14dp"
        android:layout_below="@+id/question_1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verify_btn"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/buttons"
        android:layout_margin="15dp"
        android:padding="14dp"
        android:layout_below="@+id/question_2"
        android:layout_marginTop="35dp"
        />
</RelativeLayout>