<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardElevation="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp">

        <TextView
            android:id="@+id/cart_product_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/cart_product_quantity"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentEnd="true"
            android:textAlignment="viewEnd"
            android:layout_marginRight="5dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/cart_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_below="@id/cart_product_quantity"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />

    </RelativeLayout>


</androidx.cardview.widget.CardView>