<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.AdminHomeActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_dear_admin"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/maintain_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/maintain_products"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_below="@+id/welcome"
            android:layout_marginTop="50dp"
            />

        <Button
            android:id="@+id/check_orders_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/check_new_orders"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/maintain_btn"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/admin_logout_btn"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"

            />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/check_approve_orders_btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="Check and Approve New Products"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:layout_below="@id/check_orders_btn"

        />



</RelativeLayout>