<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Admin.AdminMaintainProductsActivity"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp"
    android:layout_marginBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/product_image_maintain"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="2dp"
            />

        <EditText
            android:id="@+id/product_name_maintain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_image_maintain"
            android:hint="@string/product_price"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/inputs_design"
            android:padding="12dp"
            android:layout_margin="5dp"

            />

        <EditText
            android:id="@+id/product_price_maintain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_name_maintain"
            android:hint="@string/product_price"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/inputs_design"
            android:padding="12dp"
            android:layout_margin="5dp"

            />

        <EditText
            android:id="@+id/product_description_maintain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_price_maintain"
            android:hint="@string/product_description"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/inputs_design"
            android:padding="12dp"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/apply_changes_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_description_maintain"
            android:text="@string/apply_changes"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/buttons"
            android:padding="9dp"
            android:layout_margin="5dp"

            />
        <Button
            android:id="@+id/delete_products_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/apply_changes_Btn"
            android:text="@string/delete_this_products"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/buttons"
            android:padding="9dp"
            android:layout_margin="5dp"
            />

    </RelativeLayout>

</androidx.cardview.widget.CardView>